--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "dependencies": {
         "babel-runtime": "~6.18.0",
         "isotropic-make": "~0.3.0",
+        "isotropic-mixin-prototype-chain": "~0.0.0",
         "isotropic-prototype-chain": "~0.3.0"
     },
     "description": "A base class that automatically chains the prototypes of inherited object properties.",
