--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
         "eslint": "~5.16.0",
         "eslint-plugin-isotropic": "~0.4.2",
         "mocha": "~6.1.4",
-        "nyc": "~14.1.0"
+        "nyc": "~14.1.1"
     },
     "engines": {
         "node": "^10.15.3",
@@ -80,6 +80,9 @@
         "root": true
     },
     "homepage": "https://github.com/ibi-group/isotropic-property-chainer",
+    "keywords": [
+        "isotropic"
+    ],
     "license": "BSD-3-Clause",
     "main": "lib/property-chainer.js",
     "name": "isotropic-property-chainer",
